--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             	<p><a href="#fon5"><input type="button" value="Заказать" ></a></p>
             	</div>
             	<div class="pion">
-            		<img src="<?= $data["img"]; ?>" alt="Акция">
+            		<img src="img/pion.png" alt="Акция">
             	</div>
             	
             </section>
